# vibe_kaggling

./: .gitignore  LICENSE  README.md  create_project.py
spaceship_titanic/: .env.example  README.md  pyproject.toml
spaceship_titanic/data/: dataset_description.md
spaceship_titanic/notebooks/: exploration.ipynb
