[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spaceship-titanic"
version = "0.1.0"
description = "Predicting passenger transport in the Spaceship Titanic competition"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src"]
